--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -29,7 +29,7 @@
   </ul>
   <h3>Work Experience</h3>
 <!-- Creating border below with rows and column -->
-  <table border="2">
+  <table cellspacing=10>
     <thead>
       <tr>
         <th>years</th>
@@ -54,7 +54,7 @@
   <br>
   <hr>
   <h3>Skills</h3>
-  <table>
+  <table cellspacing=10>
     <tr>
       <td>
         <table>
