--- a/HTML-personal site/contact.html
+++ b/HTML-personal site/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rashmi's Contact</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <h3>Rashmi's Contact Details</h3>
