--- a/HTML-personal site/hobbies.html
+++ b/HTML-personal site/hobbies.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rashmi's Hobbies</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <h3>My Hobbies</h3>
@@ -10,6 +11,6 @@
       <li><a href="https://www.goodreads.com/review/list/69358628">Novels</a></li>
       <li>Travelling</li>
       <li>Marathons</li>
-    </ol>  
+    </ol>
   </body>
 </html>
