--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Rashmi's Personal Site</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
   <table cellspacing=100>
     <tr>
