--- a/CSS - My site/index.html
+++ b/CSS - My site/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Rashmi's challenge</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
 
+<head>
+  <meta charset="utf-8">
+  <title>Rashmi - A Data Scientist</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+</head>
 
-  </body>
+<body>
+  <div class="top_container">
+    <h1>Rashmi Raj.</h1>
+    <p>A Data Scientist</p>
+  </div>
+  <div class="middle_container">
+
+  </div>
+  <div class="bottom_container">
+
+  </div>
+</body>
+
 </html>
