--- a/CSS - My site/index.html
+++ b/CSS - My site/index.html
@@ -6,19 +6,52 @@
   <title>Rashmi - A Data Scientist</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Dancing+Script:wght@700&family=Vollkorn:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="top_container">
-    <h1>Rashmi Raj.</h1>
-    <p>A Data Scientist</p>
+    <img class="top-cloud"src="images/cloud.png" alt="cloud-image">
+    <h1>I'm Rashmi.</h1>
+    <!-- adding span elements- select one part of the text instead of whole line - inline text elements -->
+    <!-- inline elements are: span,anchor and images -->
+    <p>A <span class="Data">Data</span>Scientist</p>
+    <img class="bottom-cloud"src="images/cloud.png" alt="cloud-image">
+    <img src="images/mountain.png" alt="mountain-image">
   </div>
   <div class="middle_container">
-
+    <div class="profile">
+      <img src="" alt="">
+      <h2>Hello.</h2>
+      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <h3>Lorem & Ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <h3>Lorem Ipsum Dolor</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+    </div>
   </div>
   <div class="bottom_container">
-
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.github.com">Github</a>
+    <p>© 2018 Name Surname.</p>
   </div>
 </body>
-
 </html>
