--- a/CSS - My site/index.html
+++ b/CSS - My site/index.html
@@ -44,14 +44,14 @@
       <h2>Get In Touch</h2>
       <h3>Lorem ipsum dolor sit amet, non elit.</h3>
       <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      <a class="btn" href="mailto:rashmirajec@email.com">CONTACT ME</a>
     </div>
   </div>
   <div class="bottom_container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.github.com">Github</a>
-    <p>© 2018 Name Surname.</p>
+    <p>© 2020 Rashmi.</p>
   </div>
 </body>
 </html>
