--- a/CSS - My site/index.html
+++ b/CSS - My site/index.html
@@ -28,7 +28,7 @@
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
-      <img class="top-cloud"src="images/cloud.png" alt="cloud-image">
+      <img class="middle-cloud"src="images/cloud.png" alt="cloud-image">
       <div class="skill-row">
         <img class="" src="" alt="">
         <h3>Lorem & Ipsum</h3>
